tests/expected_output/assert_without_closing_parenthesis/000001-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/assert_without_closing_parenthesis.c:4:5: error: unterminated function-like macro invocation
    assert(argc == 1;
    ^
dcc explanation: it looks like there is a missing closing bracket on the assert on line 4 of tests/extracted_compile_time_errors/assert_without_closing_parenthesis.c
